--- a/DTSA_5509_Supervised_Learning_Final_Project.ipynb
+++ b/DTSA_5509_Supervised_Learning_Final_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkBBMToETtOFilyzKThNjd",
+      "authorship_tag": "ABX9TyO4UDBmSx3c4+Qa7v97D3LG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Ndaniel455/CU-DTSA/blob/main/DTSA_5509_Supervised_Learning_Final_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Categorization Comparison: Evaluating Performance of Gradient Boosting, Logistic Regression, and Naive Bayes Classifiers in Binary Data Classification"
+      ],
+      "metadata": {
+        "id": "nJV8YIPea-dn"
+      }
     },
     {
       "cell_type": "code",
@@ -70,7 +79,7 @@
         "\n",
         "The \"Adult\" dataset was specifically designed to evaluate algorithms' capability to predict whether an individual's income exceeds \\$50,000 per year based on census data. It is also known as the \"Census Income\" dataset and was derived from the 1994 Census data.\n",
         "\n",
-        "This dataset is particularly intriguing due to the presence of an imbalance in the target variable. Around 75% of the records in the dataset correspond to incomes greater than \\$50,000 per year, while only 25% represent incomes below $50,000. Successfully identifying the minority class poses a challenge for algorithms.\n",
+        "This dataset is particularly intriguing due to the presence of an imbalance in the target variable. Around 75% of the records in the dataset correspond to incomes greater than \\$50,000 per year, while only 25\\% represent incomes below \\$50,000. Successfully identifying the minority class poses a challenge for algorithms.\n",
         "#Categorize The Values\n",
         "The dataset includes 48842 records and has the following columns:\n",
         "\n",
