--- a/DTSA_5509_Supervised_Learning_Final_Project.ipynb
+++ b/DTSA_5509_Supervised_Learning_Final_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO4UDBmSx3c4+Qa7v97D3LG",
+      "authorship_tag": "ABX9TyOenZ1odgaYw7CuSUjzBJMz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,9 +77,9 @@
         "#Observe The dataset\n",
         "We obtained our dataset, called \"Adult,\" from the [UCI Machine Learning Repository]('https://archive.ics.uci.edu/'). It comprises 15 columns, including 14 predictors of various data types, such as categorical, ordinal, and numerical. The remaining column serves as the response variable, representing income categories (above or below \\$50,000). The dataset contains a total of 48,842 records, and we will split it into training and test datasets using an 80-20 ratio.\n",
         "\n",
-        "The \"Adult\" dataset was specifically designed to evaluate algorithms' capability to predict whether an individual's income exceeds \\$50,000 per year based on census data. It is also known as the \"Census Income\" dataset and was derived from the 1994 Census data.\n",
+        "The \"Adult\" dataset was specifically designed to evaluate algorithms' capability to predict whether an individual's income exceeds &#36;50,000 per year based on census data. It is also known as the \"Census Income\" dataset and was derived from the 1994 Census data.\n",
         "\n",
-        "This dataset is particularly intriguing due to the presence of an imbalance in the target variable. Around 75% of the records in the dataset correspond to incomes greater than \\$50,000 per year, while only 25\\% represent incomes below \\$50,000. Successfully identifying the minority class poses a challenge for algorithms.\n",
+        "This dataset is particularly intriguing due to the presence of an imbalance in the target variable. Around 75\\% of the records in the dataset correspond to incomes greater than &#36;50,000 per year, while only 25&#37; represent incomes below &#36;50,000. Successfully identifying the minority class poses a challenge for algorithms.\n",
         "#Categorize The Values\n",
         "The dataset includes 48842 records and has the following columns:\n",
         "\n",
