--- a/DTSA_5509_Supervised_Learning_Final_Project.ipynb
+++ b/DTSA_5509_Supervised_Learning_Final_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBs/yuCodWhV5iPWY3hKbW",
+      "authorship_tag": "ABX9TyPVL+7DsYn5aOIuJOfk5Tuj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "\n",
         "The \"Adult\" dataset was specifically designed to evaluate algorithms' capability to predict whether an individual's income exceeds &#36;50,000 per year based on census data. It is also known as the \"Census Income\" dataset and was derived from the 1994 Census data.\n",
         "\n",
-        "This dataset is particularly intriguing due to the presence of an imbalance in the target variable. Around 75\\% of the records in the dataset correspond to incomes greater than 50,000 per year, while only 25&#37; represent incomes below 50,000. Successfully identifying the minority class poses a challenge for algorithms.\n",
+        "This dataset is particularly intriguing due to the presence of an imbalance in the target variable. Around 75\\% of the records in the dataset correspond to incomes greater than 50,000 per year, while only 0.25 represent incomes below 50,000. Successfully identifying the minority class poses a challenge for algorithms.\n",
         "#Categorize The Values\n",
         "The dataset includes 48842 records and has the following columns:\n",
         "\n",
