--- a/Week_4_BBC_News_Classification_Kaggle_Mini_Project.ipynb
+++ b/Week_4_BBC_News_Classification_Kaggle_Mini_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBJaosOjo5PXn3cDbaR1TC",
+      "authorship_tag": "ABX9TyODGO4KBZVMxKFYdijBco5a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Ndaniel455/DataSciencePortfolios/blob/main/Week_4_BBC_News_Classification_Kaggle_Mini_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##BBC News Classification Kaggle Mini-Project\n",
+        "\n",
+        "Text documents are an invaluable source of data for businesses. In this mini-project, our objective is to create a system that accurately classifies news articles into five distinct categories: business, entertainment, politics, sport, and tech. We will be working with a public dataset provided by the BBC, consisting of 2,225 articles.\n",
+        "\n",
+        "The dataset is divided into two sets: a training set with 1,490 records and a testing set with 735 records. Our goal is to build a system capable of correctly categorizing previously unseen news articles.\n",
+        "\n",
+        "The competition evaluation metric is Accuracy.\n"
+      ],
+      "metadata": {
+        "id": "Oa5KrSaVTSPv"
+      }
     },
     {
       "cell_type": "code",
@@ -119,14 +134,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Week 4: BBC News Classification Kaggle Mini-Project\n",
-        "\n",
-        "Text documents are an invaluable source of data for businesses. In this mini-project, our objective is to create a system that accurately classifies news articles into five distinct categories: business, entertainment, politics, sport, and tech. We will be working with a public dataset provided by the BBC, consisting of 2,225 articles.\n",
-        "\n",
-        "The dataset is divided into two sets: a training set with 1,490 records and a testing set with 735 records. Our goal is to build a system capable of correctly categorizing previously unseen news articles.\n",
-        "\n",
-        "The competition evaluation metric is Accuracy.\n",
-        "\n",
         "### Categories:\n",
         "- Sports\n",
         "- Tech\n",
