--- a/Week_4_BBC_News_Classification_Kaggle_Mini_Project.ipynb
+++ b/Week_4_BBC_News_Classification_Kaggle_Mini_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODGO4KBZVMxKFYdijBco5a",
+      "authorship_tag": "ABX9TyPU9GMi9mMJnoB7h8VcUZnE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##BBC News Classification Kaggle Mini-Project\n",
+        "##BBC News Classification\n",
         "\n",
         "Text documents are an invaluable source of data for businesses. In this mini-project, our objective is to create a system that accurately classifies news articles into five distinct categories: business, entertainment, politics, sport, and tech. We will be working with a public dataset provided by the BBC, consisting of 2,225 articles.\n",
         "\n",
