Update and rename lstm_character_level_text_generation.ipynb to Machine_Learning/Text_Generation_with_LSTM.ipynb

--- a/Machine_Learning/Text_Generation_with_LSTM.ipynb
+++ b/Machine_Learning/Text_Generation_with_LSTM.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "\n",
-        "# Introduction to Deep Learning: Final Project\n",
+        "# Text Generation with LSTM\n",
         "### Character-Level Text Generation Inspired by Nietzsche's Beyond Good and Evil\n",
         "\n",
         "Introduction\n",
